# materials-TZ

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/materials/: conftest.py  models.py  tests.py
app/materials/api/: urls.py
app/materials/api/v1/: serializers.py  urls.py  views.py
app/materials/api/v1/services/: specific_queries.py  utils.py  xlsx.py
app/materials/migrations/: 0001_initial.py  0002_alter_category_options_alter_material_article.py
app/settings/: settings.py  urls.py
