[tool.poetry]
name = "materials-tz"
version = "0.1.0"
description = ""
authors = ["Lordd1s <uaudias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.3"
django-rest-framework = "^0.1.0"
drf-spectacular = "^0.27.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
