[tool.poetry]
name = "materials-tz"
version = "0.1.0"
description = ""
authors = ["Lordd1s <uaudias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.3"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.2"
drf-spectacular-sidecar = "^2023.8.1"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
django-environ = "^0.11.2"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
